# HLF

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Examples/: LinReg.h  Nearest.h  PCAQuad.h  Template.h
Examples/MLP/: Layer.h  MLP.h
Framework/: CMakeLists.txt
Framework/Assets/: hand.ms
Framework/Include/: Core.h  DefaultPipeline.h  GUI.h  Interface.h  Model.h
Framework/Include/Core/: Dataset.h  Distance.h  Engine.h  Evaluate.h  Puppet.h  Sampler.h
Framework/Include/GUI/: Button.h  Canva.h  Commands.h  Entry.h  InitGUI.h  Label.h  Manager.h  Picture.h  Slider.h  Style.h  TrackBar.h  Widget.h
Framework/Include/Interface/: BenchPanel.h  ConfigPanel.h  DataViewer.h  ExitBox.h  InfoBox.h  StatusBox.h
Framework/Source/Core/: Dataset.cpp  Distance.cpp  Engine.cpp  Evaluate.cpp  Puppet.cpp  Sampler.cpp
Framework/Source/GUI/: Button.cpp  Canva.cpp  Entry.cpp  InitGUI.cpp  Label.cpp  Manager.cpp  Picture.cpp  Slider.cpp  TrackBar.cpp  Widget.cpp
Framework/Source/Interface/: BenchPanel.cpp  ConfigPanel.cpp  DataViewer.cpp  ExitBox.cpp  InfoBox.cpp  StatusBox.cpp
